--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <script src="./sketch.js"></script>
     <script src="./paddle.js"></script>
     <script src="./ball.js"></script>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style>
+      body {padding: 0; margin: 0; background:#000;}
+      canvas{
+        display:block; margin:auto;
+      }
+    </style>
   </head>
   <body>
   </body>
